<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StackOverflow: Community Version</string>
    <string name="network_error_message">Something is not right! Please check your network</string>
    <string name="action_search">Search</string>
    <string name="action_filter_by_activity">Filter by Activity</string>
    <string name="action_filter_by_recency">Filter by Recency</string>
    <string name="action_filter_by_hot">Filter by Hot</string>
    <string name="action_filter_by_vote">Filter by Votes</string>
    <string name="avatar_description">User image</string>
    <string name="example_question">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="tv_example_date_item">11.10.2019</string>
    <string name="tv_example_counter_item">12</string>
    <string name="tv_example_name_item">John Doe</string>
    <string name="tv_asked_detail">Asked:</string>
    <string name="tv_answers_count_text_item">Answers:</string>
    <string name="tv_score_text_item">Score</string>
    <string name="tv_date_answer_text_item">Answered:</string>
    <string name="view_indicator_icon">view indicator icon</string>
    <string name="tv_asked_text">Asked:</string>
    <string name="search_stack_overflow">Search Stack Overflow</string>
    <string name="no_matching_result">Oops! No Matching Result. Rephrase your search query or Use fewer words</string>
    <string name="no_matching_result_rephrase">Oops! No Matching Result. Rephrase your search query</string>
    <string name="scroll_up_button">scroll up button</string>
    <string name="by">By:</string>
    <string name="no_answers_yet">No Answers Yet</string>
    <string name="app_logo">App logo</string>
    <string name="question">Question</string>
    <string name="active_questions">Active Questions</string>
    <string name="recent_questions">Recent Questions</string>
    <string name="hot_questions">Hot Questions</string>
    <string name="voted_questions">Voted Questions</string>
    <string name="vote_icon">vote icon</string>
    <string name="tag_icon">tag icon</string>
    <string name="type_a_search_query">Type a search query</string>
    <string name="search_description">Search</string>
    <string name="read_more">Read More</string>
    <string name="plus_score">+%d</string>
    <string name="answers_description">answers</string>
    <string name="answer">Answer</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_open_in_browser">Open in Browser</string>
    <string name="answered_icon">Answered icon</string>
    <string name="scan_to_search">Scan to Search</string>
    <string name="type_to_search">Type to Search</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="ocr_et_error_message">Ensure that the recognised text is here</string>
    <string name="recognised_text">Recognised Text</string>
    <string name="recognise">Recognise</string>
    <string name="ocr">OCR</string>
    <string name="filter_by_popular_tags">Filter by Popular Tags</string>
    <string name="filter_by_tag_name">Filter by Tag Name</string>
    <string name="questions">%s questions</string>
    <string name="popular_tags">Popular Tags</string>
    <string name="select_a_tag_to_view_the_related_questions">Select a Tag to view the related Questions</string>
    <string name="retry">Retry</string>
    <string name="search_tag_name">Search Tag Name</string>
    <string name="input_tag_name">Input tag name</string>
    <string name="share_image">Share image</string>
    <string name="no_text_found">No text found, scan again</string>
    <string name="text_could_not_be_recognized">Oops!, that text could not be recognized. Scan again</string>
    <string name="app_permissions">App Permissions</string>
    <string name="this_application_requires_access_permission">This application requires access to your camera and storage to function!</string>
    <string name="no">No</string>
    <string name="ask_me">Ask Me</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="cannot_open_url">Oops, cannot open URL</string>
    <string name="restart">Restart</string>
    <string name="update_downloaded">An update has just been downloaded</string>
    <string name="an_error_occurred">Oops! an error occurred, try again</string>
    <string name="share_content">Hi, check out this %s on SO:\n%s \n\nDownload StackOverflow Community Version and get to browse SO easily:\n%s</string>
    <string name="share_app">Download StackOverflow Community Version and get to browse SO easily:\n%s</string>
    <string name="app_info">App Info</string>
    <string name="lookup_emoji">&#x261D;&#xFE0F;</string>
    <string name="share">Share</string>
    <string name="connect">Connect</string>
    <string name="contact">Contact</string>
    <string name="version">v%s</string>
    <string name="app_rating">App Rating</string>
    <string name="app_rating_msg">Hey, it looks like you\'re a frequent user of StackOverflow Community Version! If you have a couple seconds, please rate this app on Google Play Store. Every rating goes a long way towards motivating us to continue improving the app!</string>
    <string name="i_will_rate">Sure, I\'ll Rate</string>
    <string name="i_am_good">No, I\'m Good</string>
</resources>
