<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.josycom.mayorjay.flowoverstack.ui.activity.MainActivity">

    <item
        android:id="@+id/action_filter_by_recency"
        android:title="@string/action_filter_by_recency"
        android:orderInCategory="10"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_filter_by_hot"
        android:title="@string/action_filter_by_hot"
        android:orderInCategory="20"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_filter_by_vote"
        android:title="@string/action_filter_by_vote"
        android:orderInCategory="30"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_filter_by_popular_tags"
        android:title="@string/filter_by_popular_tags"
        android:orderInCategory="40"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_filter_by_tag_name"
        android:title="@string/filter_by_tag_name"
        android:orderInCategory="50"
        app:showAsAction="never"/>
</menu>
