<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AnswerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/answer_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/tv_question_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:text="@string/example_question"
                android:textColor="@color/blackText"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_asked_question_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/tv_asked_detail"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_question_detail" />

            <TextView
                android:id="@+id/tv_date_question_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/tv_example_date_item"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/tv_asked_question_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_question_detail" />

            <TextView
                android:id="@+id/tv_asked_by_question_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/by"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_asked_question_detail" />

            <TextView
                android:id="@+id/tv_name_question_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:maxLines="3"
                android:text="@string/tv_example_name_item"
                android:textSize="14sp"
                android:onClick="openProfileOnWeb"
                android:textColor="@color/blueText"
                app:layout_constraintStart_toEndOf="@+id/tv_asked_by_question_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_question_detail" />

            <ImageButton
                android:id="@+id/iv_avatar_question_detail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:contentDescription="@string/avatar_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_question_detail" />

            <TextView
                android:id="@+id/tv_full_question_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:text="@string/example_question"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_question_detail" />

            <View
                android:id="@+id/v_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/blackText"
                app:layout_constraintTop_toBottomOf="@+id/tv_full_question_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_no_answer_question_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/no_answers_yet"
            android:textSize="24sp"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_below="@+id/answer_constraint"
            android:textColor="@color/colorPrimary"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/answer_constraint"
            android:id="@+id/rv_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            tools:listitem="@layout/answer_item"/>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>