<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon" />

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        tools:text="v1.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/share"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tv_app_version" />

    <ImageButton
        android:id="@+id/iv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_share_green"
        app:layout_constraintEnd_toEndOf="@id/tv_share"
        app:layout_constraintStart_toStartOf="@id/tv_share"
        app:layout_constraintTop_toBottomOf="@id/tv_share" />

    <TextView
        android:id="@+id/tv_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/connect"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/tv_app_version" />

    <ImageButton
        android:id="@+id/iv_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_twitter"
        app:layout_constraintEnd_toEndOf="@id/tv_connect"
        app:layout_constraintStart_toStartOf="@id/tv_connect"
        app:layout_constraintTop_toBottomOf="@id/tv_connect" />

    <TextView
        android:id="@+id/tv_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/contact"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/tv_app_version" />

    <ImageButton
        android:id="@+id/iv_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="@id/tv_contact"
        app:layout_constraintStart_toStartOf="@id/tv_contact"
        app:layout_constraintTop_toBottomOf="@id/tv_contact" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@id/iv_connect"
        app:layout_constraintStart_toStartOf="@id/iv_connect"
        app:layout_constraintTop_toBottomOf="@id/iv_connect" />

</androidx.constraintlayout.widget.ConstraintLayout>